# bachata-core

./: CMakeLists.txt  README.md  index.js  package-lock.json  package.json
src/: CMakeLists.txt  bachata.cpp  bachata.hpp  chromaremove.cpp  chromaremove.hpp  entry.cpp  main.cpp
test/: CMakeLists.txt  main.test.js
